--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
-<!-- 
-  本代码由 小宜技术猫 www.azpay.cn 创建
-  严禁反编译、逆向等任何形式的侵权行为，违者将追究法律责任
- -->
 <!DOCTYPE html>
 <html>
 <head>
-<title>小宜技术猫</title>
-<meta name="keywords" content="小宜技术猫">
-<meta name="description" content="小宜技术猫">
+<title>路飞 Cloud 跳转</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
 <meta name="renderer" content="webkit">
@@ -34,14 +28,14 @@ body{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:16px;line
 			<b id="cip"></b><span id="cname"></span>
 		</div>
 		<div>
-			小宜技术猫 当前网站访问人数较多
+			1
 		</div>
 		<div>
-			系统正在自动为您分配最快的服务器
+			2
 		</div>
 		<hr>
 		<div>
-			进度条如果不动并非卡顿<b>而是在加载数据</b>
+			3
 		</div>
 		</small>
 	</div>
@@ -51,7 +45,7 @@ body{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:16px;line
 	</div>
 </div>
 <script>
-var url='';
+var url='https://github.lufeivpn.xyz';
 function progress(p){document.getElementById("progress-bar").style.width=p+"%"}
 setTimeout(function(){progress("5");setTimeout(function(){progress("60");setTimeout(function(){progress("95");window.location.href=url;},600);},800);},300);
 </script>
