--- a/index.html
+++ b/index.html
@@ -1,53 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>路飞 Cloud 跳转</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
-<meta name="renderer" content="webkit">
-<meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1">
-<style>
-body{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:16px;line-height:1.42857143;color:#333;background-color:#fff;margin:0}
-*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
-.box{left:50%;top:30%;width:300px;margin-left:-150px;height:200px;bottom:10px;padding:10px;word-break:break-all;position:fixed}
-.logo{text-align:center;margin-bottom:20px}
-.tip{text-align:center;margin-bottom:15px;letter-spacing:1px}
-.progress{height:20px;margin-bottom:20px;overflow:hidden;background-color:#f5f5f5;border-radius:4px;-webkit-box-shadow:inset 0 1px 2px rgba(0,0,0,.1);box-shadow:inset 0 1px 2px rgba(0,0,0,.1);height:8px}
-.progress-bar{float:left;width:0%;height:100%;font-size:12px;line-height:20px;color:#fff;text-align:center;background-color:#337ab7;-webkit-box-shadow:inset 0 -1px 0 rgba(0,0,0,.15);box-shadow:inset 0 -1px 0 rgba(0,0,0,.15);-webkit-transition:width .6s ease;-o-transition:width .6s ease;transition:width .6s ease}
-.progress-bar-success{background-color:#5cb85c}
-</style>
-</head>
-<body>
-<div class="box">
-	<div class="logo">
-		<img src="https://ae01.alicdn.com/kf/Uf5bdbc32de7342459faca2db802170f7N.gif" width="100">
-	</div>
-	<div class="tip">
-		<small>
-		<div class="ipinfo">
-			<b id="cip"></b><span id="cname"></span>
-		</div>
-		<div>
-			1
-		</div>
-		<div>
-			2
-		</div>
-		<hr>
-		<div>
-			3
-		</div>
-		</small>
-	</div>
-	<div class="progress">
-		<div id="progress-bar" class="progress-bar progress-bar-success" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width:0%">
-		</div>
-	</div>
-</div>
-<script>
-var url='https://github.lufeivpn.xyz';
-function progress(p){document.getElementById("progress-bar").style.width=p+"%"}
-setTimeout(function(){progress("5");setTimeout(function(){progress("60");setTimeout(function(){progress("95");window.location.href=url;},600);},800);},300);
+<script language="javascript">
+function dogo(){
+var urls = new Array();
+urls[0]="https://dasd123312jd122.lf1.xyz";
+urls[1]="https://fgfdg112.lf2.xyz";
+urls[2]="http://qwe123123.1f1.xyz";
+urls[3]="https://rfgfgdfr89.lufeivpn.xyz";
+urls[4]="https://sdsd123121vvf.lufeivpn.com";
+urls[5]="https://grfgjkeldjg121.lufeivpn.top";
+n = Math.floor(Math.random()*5);
+location.href= urls[n];
+}
 </script>
-</body>
-</html>
