--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
+<!DOCTYPE html>
+<html>
 <script language="javascript">
-function dogo(){
-var urls = new Array();
-urls[0]="https://dasd123312jd122.lf1.xyz";
-urls[1]="https://fgfdg112.lf2.xyz";
-urls[2]="http://qwe123123.1f1.xyz";
-urls[3]="https://rfgfgdfr89.lufeivpn.xyz";
-urls[4]="https://sdsd123121vvf.lufeivpn.com";
-urls[5]="https://grfgjkeldjg121.lufeivpn.top";
-n = Math.floor(Math.random()*5);
-location.href= urls[n];
-}
+setTimeout(function(){
+ var arr=["https://dasd123312jd122.lf1.xyz","https://fgfdg112.lf2.xyz","http://qwe123123.1f1.xyz","https://rfgfgdfr89.lufeivpn.xyz","https://sdsd123121vvf.lufeivpn.com","https://grfgjkeldjg121.lufeivpn.top"];
+    window.location.href=arr[parseInt(Math.random()*arr.length)];
+ },1);
 </script>
+</body>
+</html>
