--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <script language="javascript">
 setTimeout(function(){
- var arr=["https://dasd123312jd122.lf1.xyz","https://fgfdg112.lf2.xyz","http://qwe123123.1f1.xyz","https://rfgfgdfr89.lufeivpn.xyz","https://sdsd123121vvf.lufeivpn.com","https://grfgjkeldjg121.lufeivpn.top"];
+ var arr=["http://das22.lf1.xyz","http://f112.lf5.xyz","http://q123.1f1.xyz","http://rf89.lufeivpn.xyz","http://sd1f.lufeivpn.com","http://grg121.lufeivpn.top","http://ger5.tao5.pw"];
     window.location.href=arr[parseInt(Math.random()*arr.length)];
  },1);
 </script>
