--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <script language="javascript">
 setTimeout(function(){
- var arr=["http://das22.lf1.xyz","http://f112.lf5.xyz","http://q123.1f1.xyz","http://rf89.lufeivpn.xyz","http://sd1f.lufeivpn.com","http://grg121.lufeivpn.top","http://ger5.tao5.pw"];
+ var arr=["http://cfcdn.lf1.xyz","http://cfcdn.lf5.xyz","http://cfcdn.1f1.xyz","http://cfcdn.lufeivpn.xyz","http://cfcdn.lufeivpn.com","http://cfcdn.lufeivpn.top","http://cfcdn.tao5.pw"];
     window.location.href=arr[parseInt(Math.random()*arr.length)];
  },1);
 </script>
